修复根据配置文件生成业务模板页面的bug

--- a/boilerplates/ox-table.create.js.handlebars
+++ b/boilerplates/ox-table.create.js.handlebars
@@ -5,7 +5,7 @@ export default {
     ],
     data () {
         return { 
-           tableData:'{{tableData}}'
+           tableData:{{options.tableData}}, 
         }
     },
     methods: {
@@ -16,6 +16,9 @@ export default {
     },
     components: {
 
+    },
+    created () {
+         
     },
     mounted () {
 
