--- a/boilerplates/ox-table.create.vue.handlebars
+++ b/boilerplates/ox-table.create.vue.handlebars
@@ -1,7 +1,7 @@
 <template>
     <div id='{{fileName}}'>
          <el-table
-      :data="{{tableData}}"
+      :data="tableData"
       style="width: 100%">
       <el-table-column
         prop="date"
